# waffle_engine

./: .gitignore  CMakeLists.txt  Default.json  MainUI.json  README.md  TODO  build.bat  build.sh  build.sh~  compile-run.bat  debug.bat  engine  imgui.ini  plan.txt  premake5.lua  run.bat
assets/tiled/: testmapAlldata.json
engine/: allocator.cpp  allocator.h  component_manager.h  debug.cpp  debug.h  defines.h  editor.cpp  editor.h  engine.h  entity.cpp  entity.h  entityManager.cpp  entityManager.h  font.cpp  font.h  glrenderSystem.cpp  glrenderSystem.h  input.cpp  input.h  inputManager.cpp  inputManager.h  renderManager.cpp  renderManager.h  resourceManager.cpp  resourceManager.h  save.cpp  save.h  sceneManager.cpp  sceneManager.h  shader.cpp  shader.h  sound.cpp  sound.h  soundSystem.cpp  soundSystem.h  sprite.cpp  sprite.h  systemManager.cpp  systemManager.h  textureManager.cpp  (+3 more)
engine/shaders/: basic.frag
engine/utils/: hashTable.cpp  hashTable.h
libc_w/: CMakeLists.txt  w_math.cpp
libc_w/include/: w_math.h
sandbox/: main.cpp  oldmain.txt  save.adf  tiles.h
sandbox/shaders/: debug.frag  debug.vert  line.frag  line.vert  quad.frag  quad.vert  sprite.frag  sprite.vert  text.frag  text.vert
shaders/: baselighting.frag  baselighting.vs  bending.frag  blending.vert  colors.frag  depth_testing.frag  grid.vert  quad.frag  quad.vert
src/: Test.h  camera.cpp  camera.h  glDefines.h  grid.h  main.cpp  mesh.cpp  mesh.h  model.h  render.h  shader.cpp  shader.h  textureManager.h
vendors/include/glad/include/glad/: glad.h
vendors/include/glad/src/: glad.c
